Moving wood_types off homepage, setting up calculator parameters on home, allowing for adding, editing, and deleting wood_types. Adding more tests.

--- a/timberframes/templates/beams_and_columns/wood_type_form.html
+++ b/timberframes/templates/beams_and_columns/wood_type_form.html
@@ -2,8 +2,8 @@
 {% load static %}
 
 {% block content %}
-  <h1>Beam and Column Calculator</h1>
-  <form class="form-vertical" method="post" action="{% url 'home' %}">{% csrf_token %}
+  <h1>New Wood Type</h1>
+  <form class="form-vertical" method="post" action="{% url 'wood_type_list' %}">{% csrf_token %}
     {{form.as_p}}
     <input type="submit" value="Save">
   </form>
