--- a/timberframes/templates/base.html
+++ b/timberframes/templates/base.html
@@ -48,6 +48,9 @@
               <li class="nav-item active">
                 <a class="nav-link" href="{% url 'home' %}">Home <span class="visually-hidden">(current)</span></a>
               </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="{% url 'wood_type_list' %}">Wood Types <span class="visually-hidden">(current)</span></a>
+              </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'about' %}">About</a>
               </li>
