Lots of changes, adding more templates, updating pages, getting wood types to be drop downs and editable, etc.

--- a/timberframes/templates/beams_and_columns/wood_type_edit.html
+++ b/timberframes/templates/beams_and_columns/wood_type_edit.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
-{% load static %}
-
+{% load crispy_forms_tags %}
 {% block content %}
   <h1>Edit {{wood_type.wood_name}}</h1>
-  <form action="" method="post">{% csrf_token %}
-  {{ form.as_p }}
-  <input type="submit" value="Update">
+  <form action="" method="post">
+    {% csrf_token %}
+    {{ form|crispy }}
+    <button class="btn btn-success" type="submit">Update</button>
   </form>
   <a href="{% url 'wood_type_detail' wood_type.pk %}">Cancel</a>
 {% endblock content %}
