--- a/timberframes/templates/beams_and_columns/wood_type_delete.html
+++ b/timberframes/templates/beams_and_columns/wood_type_delete.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
-{% load static %}
-
+{% load crispy_forms_tags %}
 {% block content %}
   <h1>Delete post</h1>
   <form action="" method="post">{% csrf_token %}
-  <p>Are you sure you want to delete "{{ wood_type.wood_name }}"?</p>
-  <input type="submit" value="Confirm"> </form>
+    <p>Are you sure you want to delete "{{ wood_type.wood_name }}"?</p>
+    <button class="btn btn-danger ml-2" type="submit">Confirm</button>
+  </form>
   <a href="{% url 'wood_type_detail' wood_type.pk %}">Cancel</a>
 {% endblock content %}
