--- a/timberframes/templates/beams_and_columns/wood_type_detail.html
+++ b/timberframes/templates/beams_and_columns/wood_type_detail.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
-{% load static %}
-
+{% load crispy_forms_tags %}
 {% block title %}Beam and Column Calculator{% endblock %}
 
 {% block content %}
