--- a/timberframes/templates/pages/about.html
+++ b/timberframes/templates/pages/about.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
-{% load static %}
-
+{% load crispy_forms_tags %}
 {% block content %}
 	<h1>About page</h1>
 {% endblock content %}
