--- a/timberframes/templates/pages/home.html
+++ b/timberframes/templates/pages/home.html
@@ -1,11 +1,23 @@
 {% extends "base.html" %}
-{% load static %}
+{% load crispy_forms_tags %}
 
 {% block content %}
-  <h1>Beam and Column Calculator</h1>
-  <form class="form-vertical" method="post" action="{% url 'home' %}">{% csrf_token %}
-    {{form.as_p}}
-    <input type="submit" value="Save">
-    Here you go: {{form.wood_type}}
-  </form>
+    <h1>Beam and Column Calculator</h1>
+    {% comment %}
+    <form>
+        {% csrf_token %}
+        <select class="form-select w-50 text-center" aria-label="Wood Type Selection">
+            {% for w_t in form.wood_type %}
+                {{w_t}}
+            {% endfor %}
+        </select>
+    </form>
+    {% endcomment %}
+    {# {% comment %} #}
+    <form class="form-vertical" method="post" action="{% url 'home' %}">
+        {% csrf_token %}
+        {{ form|crispy }}
+        <button class="btn btn-success" type="submit">Save</button>
+    </form>
+    {# {% endcomment %} #}
 {% endblock %}
