--- a/timberframes/templates/beams_and_columns/wood_type_list.html
+++ b/timberframes/templates/beams_and_columns/wood_type_list.html
@@ -39,7 +39,7 @@
     </div>
     <div class="card w-50 text-center">
         <div class="card-header">
-            <span class="font-weight-bold"><a href="{% url 'wood_type_new' %}">+ Add New Wood Type</a></span>
+            <span class="font-weight-bold"><a href="{% url 'wood_type_form' %}">+ Add New Wood Type</a></span>
         </div>
     </div>
 {% endblock content %}
